// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Skills/> Snapshot renders without crashing using mount 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 25px;
  border: 4px solid;
  min-width: 180px;
  height: 30px;
  padding: 3.5px;
  margin-right: 0.5em;
}

.c3 {
  border-radius: 25px;
  min-width: 99%;
}

.c4 {
  border-radius: 25px;
  min-width: 90%;
}

.c5 {
  border-radius: 25px;
  min-width: 50%;
}

.c6 {
  border-radius: 25px;
  min-width: 25%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 600px;
}

.c0 > *:not(:last-child) {
  margin-bottom: 1em;
}

@media (min-width:576px) {
  .c2 {
    min-width: 350px;
  }
}

<Skills>
  <section
    id="skills"
  >
    <h2>
      button.skills
    </h2>
    <styled.div>
      <div
        className="c0"
      >
        <ProgressIndicator
          description="skills.software_engineering"
          percentage={99}
        >
          <styled.div>
            <div
              className="c1"
            >
              <styled.div>
                <div
                  className="c2"
                >
                  <styled.div
                    percentage={99}
                  >
                    <div
                      className="c3"
                    />
                  </styled.div>
                </div>
              </styled.div>
              <div>
                skills.software_engineering
              </div>
            </div>
          </styled.div>
        </ProgressIndicator>
        <ProgressIndicator
          description="skills.front (skills.react)"
          percentage={90}
        >
          <styled.div>
            <div
              className="c1"
            >
              <styled.div>
                <div
                  className="c2"
                >
                  <styled.div
                    percentage={90}
                  >
                    <div
                      className="c4"
                    />
                  </styled.div>
                </div>
              </styled.div>
              <div>
                skills.front (skills.react)
              </div>
            </div>
          </styled.div>
        </ProgressIndicator>
        <ProgressIndicator
          description="skills.back (skills.node, skills.dotnet)"
          percentage={50}
        >
          <styled.div>
            <div
              className="c1"
            >
              <styled.div>
                <div
                  className="c2"
                >
                  <styled.div
                    percentage={50}
                  >
                    <div
                      className="c5"
                    />
                  </styled.div>
                </div>
              </styled.div>
              <div>
                skills.back (skills.node, skills.dotnet)
              </div>
            </div>
          </styled.div>
        </ProgressIndicator>
        <ProgressIndicator
          description="skills.db"
          percentage={25}
        >
          <styled.div>
            <div
              className="c1"
            >
              <styled.div>
                <div
                  className="c2"
                >
                  <styled.div
                    percentage={25}
                  >
                    <div
                      className="c6"
                    />
                  </styled.div>
                </div>
              </styled.div>
              <div>
                skills.db
              </div>
            </div>
          </styled.div>
        </ProgressIndicator>
        <ProgressIndicator
          description="skills.devops"
          percentage={50}
        >
          <styled.div>
            <div
              className="c1"
            >
              <styled.div>
                <div
                  className="c2"
                >
                  <styled.div
                    percentage={50}
                  >
                    <div
                      className="c5"
                    />
                  </styled.div>
                </div>
              </styled.div>
              <div>
                skills.devops
              </div>
            </div>
          </styled.div>
        </ProgressIndicator>
        <ProgressIndicator
          description="skills.automated_tests"
          percentage={90}
        >
          <styled.div>
            <div
              className="c1"
            >
              <styled.div>
                <div
                  className="c2"
                >
                  <styled.div
                    percentage={90}
                  >
                    <div
                      className="c4"
                    />
                  </styled.div>
                </div>
              </styled.div>
              <div>
                skills.automated_tests
              </div>
            </div>
          </styled.div>
        </ProgressIndicator>
      </div>
    </styled.div>
  </section>
</Skills>
`;

exports[`<Skills/> Snapshot renders without crashing using render 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 25px;
  border: 4px solid;
  min-width: 180px;
  height: 30px;
  padding: 3.5px;
  margin-right: 0.5em;
}

.c3 {
  border-radius: 25px;
  min-width: 99%;
}

.c4 {
  border-radius: 25px;
  min-width: 90%;
}

.c5 {
  border-radius: 25px;
  min-width: 50%;
}

.c6 {
  border-radius: 25px;
  min-width: 25%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 600px;
}

.c0 > *:not(:last-child) {
  margin-bottom: 1em;
}

@media (min-width:576px) {
  .c2 {
    min-width: 350px;
  }
}

<section
  id="skills"
>
  <h2>
    button.skills
  </h2>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        />
      </div>
      <div>
        skills.software_engineering
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c4"
        />
      </div>
      <div>
        skills.front (skills.react)
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c5"
        />
      </div>
      <div>
        skills.back (skills.node, skills.dotnet)
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c6"
        />
      </div>
      <div>
        skills.db
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c5"
        />
      </div>
      <div>
        skills.devops
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c4"
        />
      </div>
      <div>
        skills.automated_tests
      </div>
    </div>
  </div>
</section>
`;

exports[`<Skills/> Snapshot renders without crashing using shallow 1`] = `
<section
  id="skills"
>
  <h2>
    button.skills
  </h2>
  <styled.div>
    <ProgressIndicator
      description="skills.software_engineering"
      percentage={99}
    />
    <ProgressIndicator
      description="skills.front (skills.react)"
      percentage={90}
    />
    <ProgressIndicator
      description="skills.back (skills.node, skills.dotnet)"
      percentage={50}
    />
    <ProgressIndicator
      description="skills.db"
      percentage={25}
    />
    <ProgressIndicator
      description="skills.devops"
      percentage={50}
    />
    <ProgressIndicator
      description="skills.automated_tests"
      percentage={90}
    />
  </styled.div>
</section>
`;
